[tool.poetry]
name = "haystack-llm"
version = "0.1.0"
description = ""
authors = ["Sajad Safarveisi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
haystack-ai = "^2.4.0"
trafilatura = "^1.12.1"
pypdf = "^4.3.1"
sentence-transformers = "^3.0.1"
qdrant-haystack = "^4.2.0"
mlflow = "^2.15.1"
tiktoken = "^0.7.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
jupyter = "^1.0.0"
black = {extras = ["jupyter"], version = "^24.8.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
